tests/errors/E040.zen
struct duplicate {
    a: int,
    a: int,
}